# MAPP-FastAPI-Backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.lock.txt  requirements.txt
app/: exceptions.py  main.py  models.py  settings.py
app/controllers/: authentication.py  broadcasts.py  exceptions.py  microsoft_oauth.py  minecraft_api.py  permissions.py  security.py  server_snapshot.py  servers_folder.py
app/controllers/authentication/: __init__.py  exceptions.py  jwt.py  servers.py  users.py  xbox.py
app/controllers/servers_folder/: __init__.py  regions.py
app/models/: __init__.py  server.py  server_data.py  user.py  xbox.py
app/routers/: auth.py  oauth.py  server.py  servers.py  servers_data.py  users.py  websocket.py  xbox.py
app/schemas/: __init__.py  auth.py  files.py  server.py  server_data.py  user.py  xbox.py
app/static/: styles.css
app/templates/: register.html  server.html  servers.html
