[tool.poetry]
name = "mapp-backend"
version = "0.1.0"
description = "FastAPI based backend for mApp project"
authors = ["Bogger-byte <nik.troshnev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
tortoise-orm = "^0.18.1"
redis-orm = "^0.4.1"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.17.5"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-multipart = "^0.0.5"
fastapi-websocket-pubsub = "^0.2.0"
msal = "^1.17.0"
python-oauth2 = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
